--- a/lulu/lib/test.html
+++ b/lulu/lib/test.html
@@ -107,6 +107,7 @@ res.style="position:fixed;z-index:1;top:300px;right:10px;";
 res.href=as[i].href;
 res.innerHTML="<button>翻</button>";
 document.body.appendChild(res);
+//toast.postMessage(res.href);
 }
 }
 </script>
